[package]
name = "cmap"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
fasthash = "0.4.0"

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }
arbitrary = { version = "0.4.7", features = ["derive"] }
